crates/bin/cairo-metrics/benchmarks/openzeppelin/project/packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_erc721_enumerable.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub erc721_enumerable: ERC721EnumerableComponent::Storage,
    }

    #[constructor]
    fn constructor(ref self: ContractState) {
        self.erc721_enumerable.initializer();
    }
    use openzeppelin_token::erc721::extensions::ERC721EnumerableComponent;

    component!(
        path: ERC721EnumerableComponent, storage: erc721_enumerable, event: ERC721EnumerableEvent,
    );

    impl ERC721EnumerableInternalImpl = ERC721EnumerableComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        ERC721EnumerableEvent: ERC721EnumerableComponent::Event,
    }
}


Diagnostics:

None

AuxData:

None
