crates/bin/cairo-metrics/benchmarks/openzeppelin/project/packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_eth_account_no_initializer.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract(account)]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub eth_account: EthAccountComponent::Storage,
    }
    use openzeppelin_account::EthAccountComponent;

    component!(path: EthAccountComponent, storage: eth_account, event: EthAccountEvent);

    impl EthAccountInternalImpl = EthAccountComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        EthAccountEvent: EthAccountComponent::Event,
    }
}


Diagnostics:

====
Warning: It looks like the initializers for the following components are missing:

EthAccount

This may lead to unexpected behavior.
We recommend adding the corresponding initializer calls to the constructor.
====

AuxData:

None
